--- a/HTML/courses.html
+++ b/HTML/courses.html
@@ -47,7 +47,7 @@
 <!--          </div>-->
 <!--        </a>-->
 
-<!--        <a href="../quiz System/index.html">-->
+<!--        <a href="../quiz_system/index.html">-->
 <!--          <div class="CQuiz Cicon CLocked">-->
 <!--            <i class="fa-solid fa-clipboard-question"></i>-->
 <!--            <div class="Cname">Quiz</div>-->
@@ -75,7 +75,7 @@
 <!--          </div>-->
 <!--        </a>-->
 
-<!--        <a href="../quiz System/index.html">-->
+<!--        <a href="../quiz_system/index.html">-->
 <!--          <div class="CQuiz Cicon CLocked">-->
 <!--            <i class="fa-solid fa-clipboard-question"></i>-->
 <!--            <div class="Cname">Quiz</div>-->
