--- a/HTML/login.html
+++ b/HTML/login.html
@@ -26,42 +26,41 @@
     <div class="login-container">
       <div class="content">
         <h1>Login</h1>
-        <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label"
-            >Email address</label
-          >
-          <input
-            type="email"
-            class="form-control field mail-input-login"
-            id="exampleInputEmail1"
-            aria-describedby="emailHelp"
-          />
-        </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input
-            type="password"
-            class="form-control field password-input-login"
-            id="exampleInputPassword1"
-          />
-        </div>
-        <p class="alert-wrong-data">
-          *Wrong Data, Please check the Mail or Password !
-        </p>
-        <a href="./main.html">
-          <button
-            type="submit"
-            class="btn btn-primary button-login login-btn-enter"
-          >
-            login
-          </button>
-        </a>
+        <form action="" id="login-form">
+          <div class="mb-3">
+            <label for="email" class="form-label">Email address</label>
+            <input
+              type="email"
+              class="form-control field mail-input-login"
+              id="email"
+              aria-describedby="emailHelp"/>
+          </div>
+          <div class="mb-3">
+            <label for="password" class="form-label">Password</label>
+            <input
+              type="password"
+              class="form-control field password-input-login"
+              id="password"
+            />
+          </div>
+          <p class="alert-wrong-data">
+            *Wrong Data, Please check the Mail or Password !
+          </p>
+          <a href="./main.html">
+            <button
+              type="submit"
+              class="btn btn-primary button-login login-btn-enter"
+            >
+              login
+            </button>
+          </a>
+        </form>
       </div>
       <img src="../images/login_img1.jpg" alt="" />
     </div>
     <link rel="stylesheet" href="../bootStrap/all.min.js" />
     <link rel="stylesheet" href="../bootStrap/bootstrap.bundle.min.js" />
     <link rel="stylesheet" href="../bootStrap/bootstrap.bundle.min.js.map" />
-    <script src="../Data/main.js"></script>
+    <script src="../js/login.js"></script>
   </body>
 </html>
