--- a/HTML/main.html
+++ b/HTML/main.html
@@ -28,7 +28,7 @@
           >Water Cycle
         </a>
         <a href="./courses.html" class="card courses">Courses </a>
-        <a href="/link-to-daily.html" class="card daily">Daily</a>
+        <a href="./daily.html" class="card daily">Daily</a>
         <a href="./rank.html" class="card top">Rank</a>
         <a href="/Water Bank/index.html" class="card bank"
           ><i class="fa-solid fa-building-columns"></i>
@@ -41,7 +41,7 @@
         ></a>
       </div>
     </div>
-    <script src="../Data/main.js"></script>
+    <script src="../Data/myjscode.js"></script>
     <script
       src="https://kit.fontawesome.com/9bec9fd168.js"
       crossorigin="anonymous"
