--- a/HTML/course_video_temp.html
+++ b/HTML/course_video_temp.html
@@ -1,41 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <!-- <link rel="stylesheet" href="/CSS/main.css" /> -->
-        <link rel="stylesheet" href="../CSS/course video temp.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <link rel="stylesheet" href="/CSS/main.css" /> -->
+    <link rel="stylesheet" href="../CSS/course video temp.css" />
 
-        <link
-          rel="stylesheet"
-          href="../bootStrap/cdn.jsdelivr.net_npm_bootstrap@4.0.0_dist_css_bootstrap.min.css"
-        />
-        <link
-          rel="stylesheet"
-          href="../bootStrap/cdnjs.cloudflare.com_ajax_libs_font-awesome_5.15.4_css_all.min.css"
-        />
-        <title>Course Video</title>
-
-    </head>
+    <link
+      rel="stylesheet"
+      href="../bootStrap/cdn.jsdelivr.net_npm_bootstrap@4.0.0_dist_css_bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="../bootStrap/cdnjs.cloudflare.com_ajax_libs_font-awesome_5.15.4_css_all.min.css"
+    />
+    <title>Course Video</title>
+  </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    </nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light"></nav>
 
-      <div class="courseTemp--Container">
-      </div>
-    <script src="../Data/main.js"></script>
+    <div class="courseTemp--Container"></div>
+    <script src="../Data/myjscode.js"></script>
     <script src="../js/getVideo.js"></script>
     <script
       src="https://kit.fontawesome.com/9bec9fd168.js"
       crossorigin="anonymous"
-    >
-    </script>
+    ></script>
     <link rel="stylesheet" href="../bootStrap/all.min.js" />
     <link rel="stylesheet" href="../bootStrap/bootstrap.bundle.min.js" />
     <link rel="stylesheet" href="../bootStrap/bootstrap.bundle.min.js.map" />
 
-    <script src = "../js/navbar.js" type="module"></script>
-    <script src ="../js/main.js" type="module"></script>
-
+    <script src="../js/navbar.js" type="module"></script>
+    <script src="../js/main.js" type="module"></script>
   </body>
 </html>
