--- a/Water Bank/index.html
+++ b/Water Bank/index.html
@@ -3,39 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" type="image/png" href="/icon.png" />
+    <link rel="stylesheet" href="/CSS/main.css" />
 
     <link
-      href="https://fonts.googleapis.com/css?family=Poppins:400,500,600&display=swap"
       rel="stylesheet"
+      href="../bootStrap/cdn.jsdelivr.net_npm_bootstrap@4.0.0_dist_css_bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="../bootStrap/cdnjs.cloudflare.com_ajax_libs_font-awesome_5.15.4_css_all.min.css"
     />
 
-    <link rel="stylesheet" href="style.css" />
-    <title>Bankist</title>
+    <link rel="stylesheet" href="./style.css" />
+
+    <title>Bank</title>
   </head>
   <body>
-    
     <!-- TOP NAVIGATION -->
-    <nav>
-      <p class="welcome">Log in to get started</p>
-      <img src="./thenewlogo.png" alt="Logo" class="logo" />
-      <form class="login">
-        <input
-          type="text"
-          placeholder="user"
-          class="login__input login__input--user"
-        />
-        <!-- In practice, use type="password" -->
-        <input
-          type="text"
-          placeholder="PIN"
-          maxlength="4"
-          class="login__input login__input--pin"
-        />
-        <button class="login__btn">&rarr;</button>
-      </form>
-    </nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light"></nav>
 
     <main class="app">
       <!-- BALANCE -->
@@ -115,9 +100,6 @@
       </div>
 
       <!-- LOGOUT TIMER -->
-      <p class="logout-timer">
-        You will be logged out in <span class="timer">05:00</span>
-      </p>
     </main>
 
     <!-- <footer>
@@ -125,5 +107,13 @@
     </footer> -->
 
     <script src="script.js"></script>
+
+    <link rel="stylesheet" href="../bootStrap/all.min.js" />
+    <link rel="stylesheet" href="../bootStrap/bootstrap.bundle.min.js" />
+    <link rel="stylesheet" href="../bootStrap/bootstrap.bundle.min.js.map" />
+    <script src="../Data/myjscode.js"></script>
+
+    <script src="../js/navbar.js" type="module"></script>
+    <script src="../js/main.js" type="module"></script>
   </body>
 </html>
